--- a/index.html
+++ b/index.html
@@ -201,14 +201,15 @@
                 <div class="card p-3 col-12 col-md-6 col-lg-4">
                     <div class="card-wrapper">
                         <div class="card-img">
-                            <img src="assets/images/works2.jpg" alt="Mobirise">
+                            <a target="_blank" href="https://220.128.133.15/s1070216/q1"><img
+                                    src="assets/images/works1.jpg" alt="卓越科技大學校園資訊系統"></a>
                         </div>
                         <div class="card-box">
                             <h4 class="card-title mbr-fonts-style display-7">
-                                科技管理學系
+                                卓越科技大學校園資訊系統
                             </h4>
                             <p class="mbr-text mbr-fonts-style display-7">
-                                (準備中)
+                                
                             </p>
                         </div>
 
@@ -218,14 +219,15 @@
                 <div class="card p-3 col-12 col-md-6 col-lg-4">
                     <div class="card-wrapper">
                         <div class="card-img">
-                            <img src="assets/images/works3.jpg" alt="Mobirise">
+                            <a target="_blank" href="https://220.128.133.15/s1070216/q3"><img
+                                    src="assets/images/works2.jpg" alt="影城"></a>
                         </div>
                         <div class="card-box">
                             <h4 class="card-title mbr-fonts-style display-7">
                                 影城訂票系統
                             </h4>
                             <p class="mbr-text mbr-fonts-style display-7">
-                                (準備中)
+                                
                             </p>
                         </div>
 
