--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="card-wrapper">
                         <div class="card-img">
                             <a target="_blank" href="https://220.128.133.15/s1070216/q1"><img
-                                    src="assets/images/works1.jpg" alt="卓越科技大學校園資訊系統"></a>
+                                    src="assets/images/q1.jpg" alt="卓越科技大學校園資訊系統"></a>
                         </div>
                         <div class="card-box">
                             <h4 class="card-title mbr-fonts-style display-7">
@@ -220,7 +220,7 @@
                     <div class="card-wrapper">
                         <div class="card-img">
                             <a target="_blank" href="https://220.128.133.15/s1070216/q3"><img
-                                    src="assets/images/works2.jpg" alt="影城"></a>
+                                    src="assets/images/q3.jpg" alt="影城"></a>
                         </div>
                         <div class="card-box">
                             <h4 class="card-title mbr-fonts-style display-7">
