--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="card p-3 col-12 col-md-6 col-lg-4">
                     <div class="card-wrapper">
                         <div class="card-img">
-                            <a target="_blank" href="https://220.128.133.15/s1070216/q1"><img
+                            <a target="_blank" href="http://220.128.133.15/s1070216/q1"><img
                                     src="assets/images/q1.jpg" alt="卓越科技大學校園資訊系統"></a>
                         </div>
                         <div class="card-box">
@@ -219,7 +219,7 @@
                 <div class="card p-3 col-12 col-md-6 col-lg-4">
                     <div class="card-wrapper">
                         <div class="card-img">
-                            <a target="_blank" href="https://220.128.133.15/s1070216/q3"><img
+                            <a target="_blank" href="http://220.128.133.15/s1070216/q3"><img
                                     src="assets/images/q3.jpg" alt="影城"></a>
                         </div>
                         <div class="card-box">
